correlation methods for air quality